Add support for Export
- Script class can now annotate supported fields for export to editing in editor.
- Fix a subtle bug in SpriteRendererTemplate that cause crash on adding SpriteRenderer component.